Javascript funtion is added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      <script>
         function changeImage(imageName) {
             const  mainImage = document.getElementById('main-product-image');
-            mainImage.src= imageName
+            mainImage.src= imageName;
           }
     </script>
 </body>
